half way through CData: app not fully working yet

--- a/src/config.ini
+++ b/src/config.ini
@@ -11,9 +11,9 @@ password=Cream27Red
 db=DOI_STORE
 
 [SQL_SERVER]
-DSN=Burdock-cdera
-UID=cdm
-PWD=master10
+DSN=burdock-eraSandpit
+UID=trampolines
+PWD=Ad0rnSp4d3
 
 [DATACITE]
 user=BL.ROTHRES
@@ -28,4 +28,4 @@ DEFAULT = metadata/default/
 
 [EXTRA]
 STATIONS = {"default", "rothamsted", "broomsbarn", "woburn", "saxmundham"}
-EXPERIMENTS =  {"met", "rms", "bms", "wms", "sms", "rro", "rrn2"}
+EXPERIMENTS =  {"met", "rms", "bms", "wms", "sms", "rro"}
