config and so on

--- a/src/config.ini
+++ b/src/config.ini
@@ -11,9 +11,10 @@ password=Cream27Red
 db=DOI_STORE
 
 [SQL_SERVER]
-DSN=burdock-eraSandpit
-UID=trampolines
-PWD=Ad0rnSp4d3
+DSN=burdock-eraGilbert
+UID=bellringer
+PWD=G3n3tL30n3
+
 
 [DATACITE]
 user=BL.ROTHRES
