--- a/src/config.ini
+++ b/src/config.ini
@@ -1,31 +1,31 @@
 [ERA_DATABASE]
-host=mysql1
-user=DrPepper 
-password=Wh4tc4ng0wr0ng
+host=
+user= 
+password=
 db=eradoc
 
 [DOI_DATABASE]
-host=mysql1
-user=doi_store      
-password=Cream27Red
+host=
+user=      
+password=
 db=DOI_STORE
 
 [SQL_SERVER]
-DSN=burdock-eraGilbert
-UID=bellringer
-PWD=G3n3tL30n3
+DSN=burdock-
+UID=
+PWD=
 
 
 [DATACITE]
-user=BL.ROTHRES
-password=Jenkyn18
-prefix=10.23637
+user=BL.
+password=
+prefix=10.
 
 [STAGE]
-ROOT = http://local-info.rothamsted.ac.uk/eRA/era2021/
-STAGE = "d:/eRAWebStage/eRAstage25/" 
-REPO = "d:/eRAWebRepo/repo07/"
-DEFAULT = metadata/default/
+ROOT =
+STAGE = 
+REPO = 
+DEFAULT = 
 
 [EXTRA]
 STATIONS = {"default", "rothamsted", "broomsbarn", "woburn", "saxmundham"}
